# jiawei_triage_agent

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
configs/: departments_mapping.yaml  rag_sources.yaml  triage_agent_spec.json  triage_rules.yaml
data/: triage_cases.jsonl
data/knowledge/: hospital_triage_sop.md  triage_guidelines.md
scripts/: import_openclaw_skills.py  run_eval.py  run_multiturn_demo.py  triage_cli.py
src/medical_agent/: __init__.py  api.py  audit_logger.py  config.py  llm_client.py  main.py  rag_retriever.py  rule_engine.py  schemas.py  state_store.py  triage_agent.py
tests/: test_rule_engine.py  test_triage_agent.py
