[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "medical-agent-triage"
version = "0.1.0"
description = "Safety-first triage agent using ChatGPT + rules + RAG"
requires-python = ">=3.8"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
